--- a/termin/past.html
+++ b/termin/past.html
@@ -68,7 +68,174 @@
                 <h2 class="year">2025</h2>
                 <button class="scroll-to-top" onclick="scrollToTop()">Up</button>
                 <ul class="past_list">
-                     
+                    <li>
+                        <p class="uhr">Samstag, 18:00 Uhr</p>
+                        <p class="datum">29.11.2025</p>
+                        <p class="concert">DUO KlAkk! goes BACH</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Evangelische+Kirche,+Kirchheim+am+Neckar" target="_blank">
+                                Evangelische Kirche, Kirchheim am Neckar
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=DUO%20KlAkk!%20goes%20BACH&details=DUO%20KlAkk!%20Konzert%20in%20der%20Evangelischen%20Kirche%20Kirchheim%20am%20Neckar&location=Evangelische%20Kirche%2C%20Kirchheim%20am%20Neckar&dates=20251129T170000Z/20251129T190000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20goes%20BACH%0D%0ADESCRIPTION:DUO%20KlAkk!%20Konzert%20in%20der%20Evangelischen%20Kirche%20Kirchheim%20am%20Neckar%0D%0ADTSTART:20251129T170000Z%0D%0ADTEND:20251129T190000Z%0D%0ALOCATION:Evangelische%20Kirche,%20Kirchheim%20am%20Neckar%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="DUO_KlAkk_goes_BACH_2025-11-29_KirchheimNeckar.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Dienstag, 20:00 Uhr</p>
+                        <p class="datum">04.11.2025</p>
+                        <p class="concert">Solokonzert | REMEMBERING</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Geberplatz+1,+Bayreuth" target="_blank">
+                                Kunst- und Kulturhaus Neuneinhalb, Geberplatz 1, Bayreuth
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20im%20Kunst- und Kulturhaus Neuneinhalb,%20Bayreuth&location=Kunst- und Kulturhaus Neuneinhalb,%20Geberplatz 1,%20Bayreuth&dates=20251104T191500Z/20251104T211500Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20im%20Kunst- und Kulturhaus Neuneinhalb,%20Bayreuth%0D%0ADTSTART:20251104T191500Z%0D%0ADTEND:20251104T211500Z%0D%0ALOCATION:Kunst- und Kulturhaus Neuneinhalb,%20Geberplatz 1,%20Bayreuth%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-11-04_Bayreuth.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://www.neuneinhalb.org/veranstaltungen/">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Mittwoch, 20:00 Uhr</p>
+                        <p class="datum">29.10.2025</p>
+                        <p class="concert">Singer-Songwriter-Konzert mit Christopher von Mammen und Markus Jung</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Schulgasse+3a,+92637+Weiden+in+der+Oberpfalz" target="_blank">
+                                KunstKaufHaus, Königsstraße 25, 95028 Hof
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20im%20Kultursaal%20Hansbauer%2C%20Weiden&location=Schulgasse%203a%2C%2092637%20Weiden%20in%20der%20Oberpfalz&dates=20251025T170000Z/20251025T190000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20im%20Kultursaal%20Hansbauer%2C%20Weiden%0D%0ADTSTART:20251025T170000Z%0D%0ADTEND:20251025T190000Z%0D%0ALOCATION:Schulgasse%203a%2C%2092637%20Weiden%20in%20der%20Oberpfalz%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-10-25_Weiden.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://christophervonmammen.de/?page_id=4279">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Samstag, 19:30 Uhr</p>
+                        <p class="datum">25.10.2025</p>
+                        <p class="concert">Solokonzert | REMEMBERING</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Schulgasse+3a,+92637+Weiden+in+der+Oberpfalz" target="_blank">
+                                Kultursaal Hansbauer, Schulgasse 3a, 92637 Weiden in der Oberpfalz
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20im%20Kultursaal%20Hansbauer%2C%20Weiden&location=Schulgasse%203a%2C%2092637%20Weiden%20in%20der%20Oberpfalz&dates=20251025T170000Z/20251025T190000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20im%20Kultursaal%20Hansbauer%2C%20Weiden%0D%0ADTSTART:20251025T170000Z%0D%0ADTEND:20251025T190000Z%0D%0ALOCATION:Schulgasse%203a%2C%2092637%20Weiden%20in%20der%20Oberpfalz%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-10-25_Weiden.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Freitag, 19:30 Uhr</p>
+                        <p class="datum">17.10.2025</p>
+                        <p class="concert">Solokonzert | REMEMBERING</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Untertorstraße+6,+97828+Marktheidenfeld" target="_blank">
+                                Franck-Haus, Untertorstraße 6, 97828 Marktheidenfeld
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=Solokonzert%20%7C%20REMEMBERING&details=Solokonzert%20REMEMBERING%20im%20Franck-Haus%20Marktheidenfeld&location=Franck-Haus,%20Untertorstraße%206,%2097828%20Marktheidenfeld&dates=20251017T173000Z/20251017T193000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:Solokonzert%20%7C%20REMEMBERING%0D%0ADESCRIPTION:Solokonzert%20REMEMBERING%20im%20Franck-Haus%20Marktheidenfeld%0D%0ADTSTART:20251017T173000Z%0D%0ADTEND:20251017T193000Z%0D%0ALOCATION:Franck-Haus,%20Untertorstraße%206,%2097828%20Marktheidenfeld%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="Solokonzert_REMEMBERING_2025-10-17_Marktheidenfeld.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Samstag, 19:30 Uhr</p>
+                        <p class="datum">11.10.2025</p>
+                        <p class="concert">DUO KlAkk! goes BACH</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Rathauskeller,+Marktplatz+2,+97246+Eibelstadt" target="_blank">
+                                Rathauskeller Eibelstadt, Marktplatz 2, 97246 Eibelstadt
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=DUO%20KlAkk!%20goes%20BACH&details=DUO%20KlAkk!%20in%20Eibelstadt%20im%20Rathauskeller&location=Rathauskeller%2C%20Marktplatz%202%2C%2097246%20Eibelstadt&dates=20251011T173000Z/20251011T193000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20goes%20BACH%0D%0ADESCRIPTION:DUO%20KlAkk!%20im%20Rathauskeller%20Eibelstadt%0D%0ADTSTART:20251011T173000Z%0D%0ADTEND:20251011T193000Z%0D%0ALOCATION:Rathauskeller,%20Marktplatz%202,%2097246%20Eibelstadt%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="DUO_KlAkk_2025-10-11.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos </a>
+                    </li>
+                    <li>
+                        <p class="uhr">Sonntag, 17:00 Uhr</p>
+                        <p class="datum">12.10.2025</p>
+                        <p class="concert">DUO KlAkk! goes BACH</p>
+                        <p class="location"><i class="fa-solid fa-location-dot"></i> 
+                            <a href="https://www.google.com/maps/dir//Rathauskeller,+Marktplatz+2,+97246+Eibelstadt" target="_blank">
+                                Schlosskapelle, Schloss Johannisburg Aschaffenburg
+                            </a>
+                        </p>
+                        <div class="calendar-container">
+                            <i class="calendar-icon">&#128197;</i>
+                            <a class="calendar-link"
+                                href="https://www.google.com/calendar/render?action=TEMPLATE&text=DUO%20KlAkk!%20goes%20BACH&details=DUO%20KlAkk!%20in%20Eibelstadt%20im%20Rathauskeller&location=Rathauskeller%2C%20Marktplatz%202%2C%2097246%20Eibelstadt&dates=20251011T173000Z/20251011T193000Z"
+                                target="_blank">
+                                GOOGLE CALENDAR
+                            </a> |
+                            <a class="calendar-link"
+                                href="data:text/calendar;charset=utf8,BEGIN:VCALENDAR%0D%0AVERSION:2.0%0D%0ABEGIN:VEVENT%0D%0ASUMMARY:DUO%20KlAkk!%20goes%20BACH%0D%0ADESCRIPTION:DUO%20KlAkk!%20im%20Rathauskeller%20Eibelstadt%0D%0ADTSTART:20251011T173000Z%0D%0ADTEND:20251011T193000Z%0D%0ALOCATION:Rathauskeller,%20Marktplatz%202,%2097246%20Eibelstadt%0D%0AEND:VEVENT%0D%0AEND:VCALENDAR"
+                                download="DUO_KlAkk_2025-10-11.ics">
+                                iCAL
+                            </a>
+                        </div>                        
+                        <a target="_blank" class="mehrinfo" href="https://haraldoeler.com/projekte/duoklakk">mehr infos </a>
+                    </li> 
                     <li>
                         <p class="uhr">Sonntag, 18:00 Uhr</p>
                         <p class="datum">28.09.2025</p>
